[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "lianjia-crawler"
version = "0.1.0"
requires-python = ">=3.13"

[project.scripts]
lianjia-crawler-server = "lianjia_crawler.server:main"

[tool.uv.build-backend]
module-root = ""

[tool.pyright]
typeCheckingMode = "strict"
